<resources>
    <string name="app_name">SmartCity</string>
    <string name="CriarNota">Create Note</string>
    <string name="MinhasNotas">My Notes</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <!-- Strings used for fragments for navigation -->

    <string name="Reportar">Report Problem</string>
    <string name="Mapa">Show Map</string>
    <string name="Logout">Logout</string>
    <string name="User">User:</string>
    <string name="Pw">Password:</string>
    <string name="HintUser">Username</string>
    <string name="HintPW">Password</string>
    <string name="title_activity_menu_logado">MENU123</string>
    <string name="first_fragment_label">label</string>
    <string name="second_fragment_label">label2</string>
    <string name="inserirnota">Create New</string>
    <string name="nomenota">Title</string>
    <string name="descricaonota">Description</string>
    <string name="criar">Create</string>
    <string name="Guardar">Save</string>
    <string name="delete">Delete sucessful</string>
    <string name="foto">Take picture</string>
    <string name="userlog">userlog</string>
    <string name="preference_file_key">file1</string>
    <string name="title_activity_maps">Map</string>
    <string name="userid">1</string>
    <string name="lat">lat</string>
    <string name="lon">lon</string>
    <string name="obras">Construction</string>
    <string name="perigo">Hazard</string>
    <string name="acidente">Accident</string>

    <string-array name="tipos">
        <item>@string/obras</item>
        <item>@string/perigo</item>
        <item>@string/acidente</item>
    </string-array>
    <string name="tudo">All</string>
    <string name="eliminar">Delete</string>
    <string name="tipo">Type</string>
    <string name="permissao">No permission</string>
    <string name="apagado">Deleted successfully</string>
    <string name="erro">Error</string>
    <string name="alterado">Change successfully</string>
    <string name="login">Login successful</string>
    <string name="loginerrado">Username or password incorrect</string>
    <string name="camposvazios">Some fiels are empty</string>
    <string name="titulovazio">Title empty</string>
    <string name="criadosucesso">Created successfully</string>
</resources>