<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".MenuLogin">


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="332dp"
        android:ems="10"
        android:hint="@string/HintPW"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/User"
        android:textColor="#000000"
        android:textSize="29sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/HintUser"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:text="@string/Pw"
        android:textColor="#000000"
        android:textSize="29sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="143dp"
        android:layout_height="65dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#B1AEAE"
        android:onClick="logar"
        android:text="@string/Login"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>