<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarOccor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="146dp"
                android:layout_height="45dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/eliminar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagem"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:text="@string/nomenota"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tituloNovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:text="@string/descricaonota"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tituloNovo" />

            <TextView
                android:id="@+id/textViewTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:text="@string/tipo"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descrNovo" />

            <EditText
                android:id="@+id/descrNovo"
                android:layout_width="233dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

            <TextView
                android:id="@+id/tipoNovo"
                android:layout_width="233dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTipo" />


            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="146dp"
                android:layout_height="45dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/Guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagem" />

            <ImageView
                android:id="@+id/imagem"
                android:layout_width="340dp"
                android:layout_height="180dp"
                android:layout_marginTop="150dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descrNovo"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_clear_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>